@@ -1,666 +1,519 @@
-//********************************************************************/
-//* Copyright (C) 2005-2011                                          */
-//* MEL O'CAT  X178G243 (at) yahoo (dot) com                         */
-//* License terms: GNU General Public License Version 2              */
-//*                or any later version                              */
-//********************************************************************/
-//*4567890123456 (71-character line to adjust editor window) 23456789*/
+//*****************************************************************************/
+//* Copyright (C) 2005-2013                                                   */
+//* MEL O'CAT  X178G243 (at) yahoo (dot) com                                  */
+//* License terms: GNU General Public License Version 2                       */
+//*                or any later version                                       */
+//*****************************************************************************/
+//*456789012345678 (80-character line to adjust editor window) 456789012345678*/
 
 /*
- *  Dump.java  0.07 11/01/2011
+ * Dump.java  0.07 11/01/2011
  *
- *  Sep-25-2005
- *      -> check grammar.getGrammarInitialized()
- *         in addition to "!= null"
+ * Sep-25-2005
+ *     -> check grammar.getGrammarInitialized()
+ *        in addition to "!= null"
  *
- *  Sep-06-2006:
- *      -->Add TMFF stuff.
- *      -->When printing formula, if !isTMFFEnabled()
- *         don't use TMFF --> do it the old toString() way...
+ * Sep-06-2006:
+ *     -->Add TMFF stuff.
+ *     -->When printing formula, if !isTMFFEnabled()
+ *        don't use TMFF --> do it the old toString() way...
  *
- *  Nov-01-2007 Version 0.05
- *      - Add proofLevel 0 parm to tmffPreferences.renderFormula()
- *        call. No indentation of formulas used in Dump.java.
+ * Nov-01-2007 Version 0.05
+ *     - Add proofLevel 0 parm to tmffPreferences.renderFormula()
+ *       call. No indentation of formulas used in Dump.java.
  *
- *  Aug-01-2008 Version 0.06
- *      - Add PrintBookManagerChapters(),
- *            PrintBookManagerSections(), and
- *            PrintBookManagerSectionDetails().
+ * Aug-01-2008 Version 0.06
+ *     - Add PrintBookManagerChapters(),
+ *           PrintBookManagerSections(), and
+ *           PrintBookManagerSectionDetails().
  *
- *  Version 0.07 - Nov-01-2011:  comment update.
- *      --> Add check for valid parse tree
- *          before calling TMFFPreferences.renderFormula()
- *          in dumpStmtProperties() because TMFF requires
- *          real parse trees except in format number 0.
+ * Version 0.07 - Nov-01-2011:  comment update.
+ *     --> Add check for valid parse tree
+ *         before calling TMFFPreferences.renderFormula()
+ *         in dumpStmtProperties() because TMFF requires
+ *         real parse trees except in format number 0.
  */
 
 package mmj.util;
 
+import java.io.PrintWriter;
 import java.util.*;
-import java.io.*;
+
 import mmj.lang.*;
+import mmj.tmff.TMFFPreferences;
+import mmj.tmff.TMFFStateParams;
 import mmj.verify.*;
-import mmj.mmio.*;
-import mmj.tmff.*;
 
 /**
- *  Dump started out as just testing code that could be
- *  "throwaway". Now a bit of it is used in mmj.Util.BatchMMJ2
- *  to dump/print info from LogicalSystem and Grammar. The
- *  report is ugly but better than nothing. And it is key
- *  for doing parallel testing because almost every key
- *  data element is output to the printer.
- *  <p>
- *  Dump can employ a PrintWriter or send its stuff to
- *  System.out. The PrintWriter can be set at construction
- *  time or later via a "set" function.
- *  <p>
- *  Most of the Dump print routines are invoked by
- *  BatchMMJ2 but some are leftovers from testing.
- *  Dump is ugly but it works.
+ * Dump started out as just testing code that could be "throwaway". Now a bit of
+ * it is used in mmj.Util.BatchMMJ2 to dump/print info from LogicalSystem and
+ * Grammar. The report is ugly but better than nothing. And it is key for doing
+ * parallel testing because almost every key data element is output to the
+ * printer.
+ * <p>
+ * Dump can employ a PrintWriter or send its stuff to System.out. The
+ * PrintWriter can be set at construction time or later via a "set" function.
+ * <p>
+ * Most of the Dump print routines are invoked by BatchMMJ2 but some are
+ * leftovers from testing. Dump is ugly but it works.
  */
 public class Dump {
 
-    public PrintWriter sysOut     = null;
+    public PrintWriter sysOut = null;
     public TMFFPreferences tmffPreferences;
 
     /**
-     *  Default constructor which will print to System.out.
+     * Default constructor which will print to System.out.
      */
     public Dump() {
         setTMFFPreferences(new TMFFPreferences());
     }
 
     /**
-     *  Construct Dump using a PrintWriter for output.
+     * Construct Dump using a PrintWriter for output.
+     * 
+     * @param sysOut the PrintWriter
      */
-    public Dump(PrintWriter sysOut) {
-        this.sysOut               = sysOut;
+    public Dump(final PrintWriter sysOut) {
+        this.sysOut = sysOut;
         setTMFFPreferences(new TMFFPreferences());
     }
 
     /**
-     *  Sets Dump's SysOut to a new PrintWriter, or null
-     *  to revert to writing to System.out.
-     *
-     *  @param sysOut a PrintWriter, or null for System.out output.
+     * Sets Dump's SysOut to a new PrintWriter, or null to revert to writing to
+     * System.out.
+     * 
+     * @param sysOut a PrintWriter, or null for System.out output.
      */
-    public void setSysOut(PrintWriter sysOut) {
-        this.sysOut               = sysOut;
+    public void setSysOut(final PrintWriter sysOut) {
+        this.sysOut = sysOut;
         setTMFFPreferences(new TMFFPreferences());
     }
 
     /**
-     *  Sets Dump's Text Mode Formula Formatting preference parameters
-     *  to a new set of values.
-     *  <p>
-     *  Note: mmj.util.OutputBoss uses this.
-     *  <p>
-     *  @param tmffPreferences TMFF Preference parameters.
+     * Sets Dump's Text Mode Formula Formatting preference parameters to a new
+     * set of values.
+     * <p>
+     * Note: mmj.util.OutputBoss uses this.
+     * 
+     * @param tmffPreferences TMFF Preference parameters.
      */
-    public void setTMFFPreferences(TMFFPreferences tmffPreferences) {
-        this.tmffPreferences      = tmffPreferences;
+    public void setTMFFPreferences(final TMFFPreferences tmffPreferences) {
+        this.tmffPreferences = tmffPreferences;
     }
 
     /**
-     *  Print a line from a StringBuffer.
-     *
-     *  @param sb StringBuffer line to be printed.
+     * Print a line from a StringBuilder.
+     * 
+     * @param sb StringBuilder line to be printed.
      */
-    public void sysOutDumpAPrintLn(StringBuffer sb) {
+    public void sysOutDumpAPrintLn(final StringBuilder sb) {
         sysOutDumpAPrintLn(sb.toString());
     }
 
     /**
-     *  Print a line from a String.
-     *
-     *  @param s String line to be printed.
+     * Print a line from a String.
+     * 
+     * @param s String line to be printed.
      */
-    public void sysOutDumpAPrintLn(String s) {
-        if (sysOut == null) {
+    public void sysOutDumpAPrintLn(final String s) {
+        if (sysOut == null)
             System.out.println(s);
-        }
-        else {
+        else
             sysOut.println(s);
-        }
     }
 
     /**
-     *  "printSyntaxDetails" is used by BatchMMJ2 to print
-     *  all syntax-related information about a LogicalSystem
-     *  and its Grammar.
-     *
-     *  @param caption identifying caption for the report.
-     *  @param logicalSystem a LogicalSystem object.
-     *  @param grammar a Grammar object derived from the Logical
-     *         System.
+     * "printSyntaxDetails" is used by BatchMMJ2 to print all syntax-related
+     * information about a LogicalSystem and its Grammar.
+     * 
+     * @param caption identifying caption for the report.
+     * @param logicalSystem a LogicalSystem object.
+     * @param grammar a Grammar object derived from the Logical System.
      */
-    public void printSyntaxDetails(
-                    String        caption,
-                    LogicalSystem logicalSystem,
-                    Grammar       grammar) {
+    public void printSyntaxDetails(final String caption,
+        final LogicalSystem logicalSystem, final Grammar grammar)
+    {
 
+        dumpLogSysCounts(1, UtilConstants.DUMP_LOGSYS_COUNTS + caption,
+            logicalSystem.getSymTbl(), logicalSystem.getStmtTbl());
 
-        dumpLogSysCounts(1,
-                         UtilConstants.DUMP_LOGSYS_COUNTS
-                             + caption,
-                         logicalSystem.getSymTbl(),
-                         logicalSystem.getStmtTbl());
-
-        TreeSet provableLogicStmtTypSet = new TreeSet(MObj.SEQ);
-        if (grammar != null &&
-            grammar.getGrammarInitialized()) {
-            Cnst[] provableLogicStmtTypArray =
-                grammar.getProvableLogicStmtTypArray();
-            for (int i = 0;
-                 i < provableLogicStmtTypArray.length;
-                 i++) {
-                provableLogicStmtTypSet.add(
-                    provableLogicStmtTypArray[i]);
-            }
+        final Set<Sym> provableLogicStmtTypSet = new TreeSet<Sym>(MObj.SEQ);
+        if (grammar != null && grammar.getGrammarInitialized()) {
+            final Cnst[] provableLogicStmtTypArray = grammar
+                .getProvableLogicStmtTypArray();
+            for (final Cnst element : provableLogicStmtTypArray)
+                provableLogicStmtTypSet.add(element);
             sysOutDumpAPrintLn(" ");
-            dumpSymTbl(1,
-                  UtilConstants.DUMP_PROVABLE_TYP_SET
-                    + caption,
-                  provableLogicStmtTypSet);
+            dumpSymTbl(1, UtilConstants.DUMP_PROVABLE_TYP_SET + caption,
+                provableLogicStmtTypSet);
 
-
-            TreeSet logicStmtTypSet = new TreeSet(MObj.SEQ);
-            Cnst[] logicStmtTypArray =
-                grammar.getLogicStmtTypArray();
-            for (int i = 0;
-                 i < logicStmtTypArray.length;
-                 i++) {
-                logicStmtTypSet.add(
-                    logicStmtTypArray[i]);
-            }
+            final Set<Cnst> logicStmtTypSet = new TreeSet<Cnst>(MObj.SEQ);
+            final Cnst[] logicStmtTypArray = grammar.getLogicStmtTypArray();
+            for (final Cnst element : logicStmtTypArray)
+                logicStmtTypSet.add(element);
             sysOutDumpAPrintLn(" ");
-            dumpSymTbl(1,
-                       UtilConstants.DUMP_PROVABLE_TYP_SET
-                           + caption,
-                       logicStmtTypSet);
-
+            dumpSymTbl(1, UtilConstants.DUMP_PROVABLE_TYP_SET + caption,
+                logicStmtTypSet);
 
             sysOutDumpAPrintLn(" ");
-            dumpSymTbl(1,
-                       UtilConstants.DUMP_VARHYP_TYP_SET
-                           + caption,
-                       grammar.getVarHypTypSet());
+            dumpSymTbl(1, UtilConstants.DUMP_VARHYP_TYP_SET + caption,
+                grammar.getVarHypTypSet());
 
             sysOutDumpAPrintLn(" ");
-            dumpSymTbl(1,
-                       UtilConstants.DUMP_SYNTAX_AXIOM_TYP_SET
-                           + caption,
-                        grammar.getSyntaxAxiomTypSet());
+            dumpSymTbl(1, UtilConstants.DUMP_SYNTAX_AXIOM_TYP_SET + caption,
+                grammar.getSyntaxAxiomTypSet());
 
             sysOutDumpAPrintLn(" ");
-            dumpSymTbl(1,
-                       UtilConstants.DUMP_NULLS_PERMITTED_TYP_SET
-                           + caption,
-                       grammar.getNullsPermittedTypSet());
+            dumpSymTbl(1, UtilConstants.DUMP_NULLS_PERMITTED_TYP_SET + caption,
+                grammar.getNullsPermittedTypSet());
 
         }
         sysOutDumpAPrintLn(" ");
-        Collection symTblValues   =
-            logicalSystem.getSymTbl().values();
-        dumpSymTbl(1,
-                   UtilConstants.DUMP_LOGSYS_SYM_TBL
-                        + caption,
-                   symTblValues);
+        final Collection<Sym> symTblValues = logicalSystem.getSymTbl().values();
+        dumpSymTbl(1, UtilConstants.DUMP_LOGSYS_SYM_TBL + caption, symTblValues);
 
-        if (grammar != null &&
-            grammar.getGrammarInitialized()) {
+        if (grammar != null && grammar.getGrammarInitialized()) {
 
             sysOutDumpAPrintLn(" ");
             dumpGrammarRuleCollection(
-                          UtilConstants.DUMP_GRAMMAR_RULE_MAX_PRINT,
-                          1,
-                          UtilConstants.DUMP_NULLS_PERMITTED_LIST,
-                          grammar.getNullsPermittedGRList());
+                UtilConstants.DUMP_GRAMMAR_RULE_MAX_PRINT, 1,
+                UtilConstants.DUMP_NULLS_PERMITTED_LIST,
+                grammar.getNullsPermittedGRList());
 
             sysOutDumpAPrintLn(" ");
             dumpGrammarRuleCollection(
-                          UtilConstants.DUMP_GRAMMAR_RULE_MAX_PRINT,
-                          1,
-                          UtilConstants.DUMP_TYPE_CONVERSION_LIST,
-                          grammar.getTypeConversionGRList());
+                UtilConstants.DUMP_GRAMMAR_RULE_MAX_PRINT, 1,
+                UtilConstants.DUMP_TYPE_CONVERSION_LIST,
+                grammar.getTypeConversionGRList());
 
             sysOutDumpAPrintLn(" ");
             dumpGrammarRuleCollection(
-                          UtilConstants.DUMP_GRAMMAR_RULE_MAX_PRINT,
-                          1,
-                          UtilConstants.DUMP_NOTATION_LIST,
-                          grammar.getNotationGRSet());
+                UtilConstants.DUMP_GRAMMAR_RULE_MAX_PRINT, 1,
+                UtilConstants.DUMP_NOTATION_LIST, grammar.getNotationGRSet());
 
             sysOutDumpAPrintLn(" ");
-            dumpTheGrammar(1,
-                           grammar.getVarHypTypSet(),
-                           symTblValues);
+            dumpTheGrammar(1, grammar.getVarHypTypSet(), symTblValues);
         }
 
     }
 
     /**
-     *  "printOneStatementDetails" is used by BatchMMJ2 to print
-     *  information about a single Stmt.
-     *
-     *  @param stmt a Stmt object.
+     * "printOneStatementDetails" is used by BatchMMJ2 to print information
+     * about a single Stmt.
+     * 
+     * @param stmt a Stmt object.
      */
-    public void printOneStatementDetails(Stmt stmt) {
-        dumpOneStmt(1,       //indentNbr
-                    stmt);
+    public void printOneStatementDetails(final Stmt stmt) {
+        dumpOneStmt(1, // indentNbr
+            stmt);
     }
 
     /**
-     *  "printStatementDetails" is used by BatchMMJ2 to print
-     *  Metamath Statement details, up to the limit imposed
-     *  by maxStatementPrintCountParm.
-     *
-     *  @param caption identifying caption for the report.
-     *  @param stmtTbl Statement Table (Map)
-     *  @param maxStatementPrintCountParm max number of Stmt's
-     *         to print.
+     * "printStatementDetails" is used by BatchMMJ2 to print Metamath Statement
+     * details, up to the limit imposed by maxStatementPrintCountParm.
+     * 
+     * @param caption identifying caption for the report.
+     * @param stmtTbl Statement Table (Map)
+     * @param maxStatementPrintCountParm max number of Stmt's to print.
      */
-    public void printStatementDetails(
-                    String        caption,
-                    Map           stmtTbl,
-                    int           maxStatementPrintCountParm) {
+    public void printStatementDetails(final String caption,
+        final Map<String, Stmt> stmtTbl, final int maxStatementPrintCountParm)
+    {
 
         sysOutDumpAPrintLn(" ");
-        dumpStmtTbl(maxStatementPrintCountParm,  //maxDumpCnt
-                    1,                           //indentNbr
-                    UtilConstants.DUMP_LOGSYS_STMT_TBL
-                        + caption,
-                    stmtTbl.values());
+        dumpStmtTbl(maxStatementPrintCountParm, // maxDumpCnt
+            1, // indentNbr
+            UtilConstants.DUMP_LOGSYS_STMT_TBL + caption, stmtTbl.values());
 
     }
 
     /**
-     *  "printBookManagerChapters" is used by BatchMMJ2 to print
-     *  BookManager Chapter information.
-     *
-     *  This function is used primarily as a way to generate
-     *  test output but the RunParm "PrintBookManagerChapters"
-     *  may be useful for mmj2 users.
-     *
-     *  @param caption identifying caption for the report.
-     *  @param bookManager the BookManager in use.
+     * "printBookManagerChapters" is used by BatchMMJ2 to print BookManager
+     * Chapter information.
+     * <p>
+     * This function is used primarily as a way to generate test output but the
+     * RunParm "PrintBookManagerChapters" may be useful for mmj2 users.
+     * 
+     * @param caption identifying caption for the report.
+     * @param bookManager the BookManager in use.
      */
-    public void printBookManagerChapters(
-                    String        caption,
-                    BookManager   bookManager) {
+    public void printBookManagerChapters(final String caption,
+        final BookManager bookManager)
+    {
 
         sysOutDumpAPrintLn(" ");
-        dumpBookManagerChapters(
-                        1, //indentNbr
-                        caption,
-                        bookManager.getChapterList().iterator());
+        dumpBookManagerChapters(1, // indentNbr
+            caption, bookManager.getChapterList());
     }
 
     /**
-     *  "printBookManagerSections" is used by BatchMMJ2 to print
-     *  BookManager Section information.
-     *
-     *  This function is used primarily as a way to generate
-     *  test output but the RunParm "PrintBookManagerSections"
-     *  may be useful for mmj2 users.
-     *
-     *  @param caption identifying caption for the report.
-     *  @param bookManager the BookManager in use.
+     * "printBookManagerSections" is used by BatchMMJ2 to print BookManager
+     * Section information.
+     * <p>
+     * This function is used primarily as a way to generate test output but the
+     * RunParm "PrintBookManagerSections" may be useful for mmj2 users.
+     * 
+     * @param caption identifying caption for the report.
+     * @param bookManager the BookManager in use.
      */
-    public void printBookManagerSections(
-                    String        caption,
-                    BookManager   bookManager) {
+    public void printBookManagerSections(final String caption,
+        final BookManager bookManager)
+    {
 
         sysOutDumpAPrintLn(" ");
-        dumpBookManagerSections(
-                        1, //indentNbr
-                        caption,
-                        bookManager.getSectionList().iterator());
+        dumpBookManagerSections(1, // indentNbr
+            caption, bookManager.getSectionList());
     }
 
     /**
-     *  "printBookManagerSectionDetails" is used by BatchMMJ2 to print
-     *  BookManager Section, MObj and Chapter information.
-     *
-     *  This function is used primarily as a way to generate
-     *  test output but the RunParm "PrintBookManagerSectionDetails"
-     *  may be useful for mmj2 users.
-     *
-     *  @param runParm contains RunParm name and values.
-     *  @param logicalSystem the LogicalSystem in use.
-     *  @param bookManager the BookManager in use.
-     *  @param section the Section to be printed or null if
-     *         all Sections are to be printed.
+     * "printBookManagerSectionDetails" is used by BatchMMJ2 to print
+     * BookManager Section, MObj and Chapter information.
+     * <p>
+     * This function is used primarily as a way to generate test output but the
+     * RunParm "PrintBookManagerSectionDetails" may be useful for mmj2 users.
+     * 
+     * @param runParm contains RunParm name and values.
+     * @param logicalSystem the LogicalSystem in use.
+     * @param bookManager the BookManager in use.
+     * @param section the Section to be printed or null if all Sections are to
+     *            be printed.
      */
-    public void printBookManagerSectionDetails(
-                    RunParmArrayEntry   runParm,
-                    LogicalSystem       logicalSystem,
-                    BookManager         bookManager,
-                    Section             section) {
+    public void printBookManagerSectionDetails(final RunParmArrayEntry runParm,
+        final LogicalSystem logicalSystem, final BookManager bookManager,
+        final Section section)
+    {
 
         sysOutDumpAPrintLn(" ");
 
         dumpBookManagerSectionDetails(
-                1, //indentNbr
-                runParm,
-                bookManager,
-                bookManager.getSectionMObjIterator(logicalSystem),
-                section);
+            1, // indentNbr
+            runParm, bookManager,
+            bookManager.getSectionMObjIterable(logicalSystem), section);
     }
 
-    public String[]  keyArray = new String[100];
-    public int       keyArrayCount = 0;
+    public String[] keyArray = new String[100];
+    public int keyArrayCount = 0;
 
-    public static final String[] indentTbl = {
-        "  ",
-        "    ",
-        "      ",
-        "        ",
-        "          ",
-        "            ",
-        "              ",
-        "                ",
-        "                  ",
-        "                    ",
-        "                      ",
-        "                        ",
-        "                          ",
-        "                            ",
-        "                              ",
-        "                                ",
-        "                                  ",
-        "                                    ",
-        "                                      ",
-        "                                        ",
-        "                                          ",
-        "                                            ",
-        "                                              ",
-        "                                                ",
-        "                                                  ",
-        "                                                    ",
-        "                                                      ",
-        "                                                        ",
-        "                                                          ",
-        "                                                            ",
-        "                                                              "
-    };
-
-    public void dumpLogSys(int           indentNbr,
-                           String        caption,
-                           LogicalSystem logSys) {
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_LOGICAL_SYSTEM
-                           + caption
-                           + UtilConstants.DUMP_START);
-
-        Collection symTbl  = (logSys.getSymTbl()).values();
-        Collection stmtTbl = (logSys.getStmtTbl()).values();
-
-        dumpLogSysCounts(indentNbr + 1,
-                         caption,
-                         symTbl,
-                         stmtTbl);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_LOGICAL_SYSTEM
-                           + caption
-                           + UtilConstants.DUMP_END);
+    public static final String[] indentTbl = new String[31];
+    static {
+        final StringBuilder s = new StringBuilder();
+        for (int i = 0; i < 31; i++) {
+            s.append("  ");
+            indentTbl[i] = s.toString();
+        }
     }
 
-    public void dumpLogSysCounts(int        indentNbr,
-                                 String     caption,
-                                 Map        symTbl,
-                                 Map        stmtTbl) {
+    public void dumpLogSys(final int indentNbr, final String caption,
+        final LogicalSystem logSys)
+    {
+        sysOutDumpAPrintLn(indentTbl[indentNbr]
+            + UtilConstants.DUMP_LOGICAL_SYSTEM + caption
+            + UtilConstants.DUMP_START);
 
+        final Collection<Sym> symTbl = logSys.getSymTbl().values();
+        final Collection<Stmt> stmtTbl = logSys.getStmtTbl().values();
+
+        dumpLogSysCounts(indentNbr + 1, caption, symTbl, stmtTbl);
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + " "
-                           + caption
-                           + UtilConstants.DUMP_SYM_TBL_SIZE
-                           + symTbl.size());
+            + UtilConstants.DUMP_LOGICAL_SYSTEM + caption
+            + UtilConstants.DUMP_END);
+    }
+
+    public void dumpLogSysCounts(final int indentNbr, final String caption,
+        final Map<String, Sym> symTbl, final Map<String, Stmt> stmtTbl)
+    {
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + " "
-                           + caption
-                           + UtilConstants.DUMP_STMT_TBL_SIZE
-                           + stmtTbl.size());
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + " " + caption
+            + UtilConstants.DUMP_SYM_TBL_SIZE + symTbl.size());
+
+        sysOutDumpAPrintLn(indentTbl[indentNbr]);
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + " " + caption
+            + UtilConstants.DUMP_STMT_TBL_SIZE + stmtTbl.size());
 
     }
 
-
-    public void dumpLogSysCounts(int        indentNbr,
-                                 String     caption,
-                                 Collection symTbl,
-                                 Collection stmtTbl) {
+    public void dumpLogSysCounts(final int indentNbr, final String caption,
+        final Collection<Sym> symTbl, final Collection<Stmt> stmtTbl)
+    {
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + " "
-                           + caption
-                           + UtilConstants.DUMP_SYM_TBL_SIZE
-                           + symTbl.size());
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + " " + caption
+            + UtilConstants.DUMP_SYM_TBL_SIZE + symTbl.size());
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + " "
-                           + caption
-                           + UtilConstants.DUMP_STMT_TBL_SIZE
-                           + stmtTbl.size());
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + " " + caption
+            + UtilConstants.DUMP_STMT_TBL_SIZE + stmtTbl.size());
 
     }
 
-    public void dumpSymTbl(int        indentNbr,
-                           String     caption,
-                           Collection symTbl) {
+    public void dumpSymTbl(final int indentNbr, final String caption,
+        final Collection<? extends Sym> symTbl)
+    {
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + UtilConstants.DUMP_SYM_TBL
+            + caption);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_SYM_TBL
-                           + caption);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_SYM_TBL_UNDERSCORE
-                           );
+            + UtilConstants.DUMP_SYM_TBL_UNDERSCORE);
 
         if (symTbl == null) {
             sysOutDumpAPrintLn(indentTbl[indentNbr]
-                               +
-                               UtilConstants.DUMP_SYM_TBL_IS_EMPTY);
+                + UtilConstants.DUMP_SYM_TBL_IS_EMPTY);
             return;
         }
 
-        TreeSet   symSet = new TreeSet(MObj.SEQ);
+        final Set<Sym> symSet = new TreeSet<Sym>(MObj.SEQ);
         symSet.addAll(symTbl);
 
-        Sym      sym;
-        Iterator iC = symSet.iterator();
-        while (iC.hasNext()) {
-            sym             = (Sym)iC.next();
-            if (sym.isVar()) {
-                dumpSymVarFull(indentNbr,
-                               (Var)sym);
-            }
-            else {
-                dumpSymCnstFull(indentNbr,
-                               (Cnst)sym);
-            }
-        }
+        for (final Sym sym : symSet)
+            if (sym instanceof Var)
+                dumpSymVarFull(indentNbr, (Var)sym);
+            else
+                dumpSymCnstFull(indentNbr, (Cnst)sym);
     }
 
-    public void dumpStmtTbl(int       indentNbr,
-                           String     caption,
-                           Collection stmtTbl) {
-        dumpStmtTbl(Integer.MAX_VALUE,
-                    indentNbr,
-                    caption,
-                    stmtTbl);
+    public void dumpStmtTbl(final int indentNbr, final String caption,
+        final Collection<? extends Stmt> stmtTbl)
+    {
+        dumpStmtTbl(Integer.MAX_VALUE, indentNbr, caption, stmtTbl);
     }
 
-    public void dumpStmtTbl(int       maxDumpCnt,
-                            int       indentNbr,
-                            String     caption,
-                            Collection stmtTbl) {
+    public void dumpStmtTbl(final int maxDumpCnt, final int indentNbr,
+        final String caption, final Collection<? extends Stmt> stmtTbl)
+    {
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + UtilConstants.DUMP_STMT_TBL
+            + caption + UtilConstants.DUMP_OF_FIRST + maxDumpCnt);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_STMT_TBL
-                           + caption
-                           + UtilConstants.DUMP_OF_FIRST
-                           + maxDumpCnt);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
+            + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
 
         if (stmtTbl == null) {
             sysOutDumpAPrintLn(indentTbl[indentNbr]
-                               +
-                               UtilConstants.DUMP_STMT_TBL_IS_EMPTY);
+                + UtilConstants.DUMP_STMT_TBL_IS_EMPTY);
             return;
         }
 
-        TreeSet   stmtSet = new TreeSet(MObj.SEQ);
+        final Set<Stmt> stmtSet = new TreeSet<Stmt>(MObj.SEQ);
         stmtSet.addAll(stmtTbl);
 
-        Stmt      stmt;
-        int       dumpCnt = 0;
-        Iterator  iC = stmtSet.iterator();
-        while (iC.hasNext() &&
-               dumpCnt++ < maxDumpCnt) {
-            stmt             = (Stmt)iC.next();
-            dumpOneStmt(indentNbr,
-                        stmt);
+        int dumpCnt = 0;
+        for (final Stmt stmt : stmtSet) {
+            if (dumpCnt++ >= maxDumpCnt)
+                break;
+            dumpOneStmt(indentNbr, stmt);
         }
     }
 
-    public void dumpOneStmt(int    indentNbr,
-                            Stmt   stmt) {
+    public void dumpOneStmt(final int indentNbr, final Stmt stmt) {
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
 
         if (stmt instanceof Theorem) {
-            dumpStmtTheoremFull(indentNbr,
-                                (Theorem)stmt);
+            dumpStmtTheoremFull(indentNbr, (Theorem)stmt);
             return;
         }
         if (stmt instanceof Axiom) {
-            dumpStmtAxiomFull(indentNbr,
-                                (Axiom)stmt);
+            dumpStmtAxiomFull(indentNbr, (Axiom)stmt);
             return;
         }
         if (stmt instanceof LogHyp) {
-            dumpStmtLogHypFull(indentNbr,
-                                (LogHyp)stmt);
+            dumpStmtLogHypFull(indentNbr, (LogHyp)stmt);
             return;
         }
         if (stmt instanceof VarHyp) {
-            dumpStmtVarHypFull(indentNbr,
-                               (VarHyp)stmt);
+            dumpStmtVarHypFull(indentNbr, (VarHyp)stmt);
             return;
         }
         throw new IllegalArgumentException(
-            UtilConstants.ERRMSG_DUMP_STMT_UNRECOG_1
-            + stmt.getLabel());
+            UtilConstants.ERRMSG_DUMP_STMT_UNRECOG_1 + stmt.getLabel());
     }
 
+    public void dumpStmtTheoremFull(int indentNbr, final Theorem theorem) {
 
-    public void dumpStmtTheoremFull(int          indentNbr,
-                                    Theorem      theorem) {
-
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_THEOREM);
 
         ++indentNbr;
 
-        dumpStmtProperties(indentNbr,
-                           sb,
-                           theorem);
-        dumpAssrtProperties(indentNbr,
-                            theorem);
+        dumpStmtProperties(indentNbr, sb, theorem);
+        dumpAssrtProperties(indentNbr, theorem);
 
-        sb = new StringBuffer();
-        OptFrame optFrame = theorem.getOptFrame();
+        sb = new StringBuilder();
+        final ScopeFrame optFrame = theorem.getOptFrame();
         sb.append(indentTbl[indentNbr]);
-        sb.append(
-            UtilConstants.DUMP_OPT_FRAME_HYP_ARRAY);
+        sb.append(UtilConstants.DUMP_OPT_FRAME_HYP_ARRAY);
         char comma = ' ';
-        for (int i = 0; i < optFrame.optHypArray.length; i++) {
+        for (final Hyp element : optFrame.hypArray) {
             sb.append(comma);
             comma = UtilConstants.DUMP_COMMA;
-            sb.append(optFrame.optHypArray[i].getLabel());
+            sb.append(element.getLabel());
         }
         sb.append(UtilConstants.DUMP_END_BRACKET);
         sysOutDumpAPrintLn(sb);
 
-
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_OPT_FRAME_DJ_VARS);
         comma = ' ';
-        for (int i = 0; i < optFrame.optDjVarsArray.length; i++) {
+        for (final DjVars element : optFrame.djVarsArray) {
             sb.append(comma);
             comma = UtilConstants.DUMP_COMMA;
-            sb.append(optFrame.optDjVarsArray[i].getVarLo());
+            sb.append(element.getVarLo());
             sb.append(" ");
-            sb.append(optFrame.optDjVarsArray[i].getVarHi());
+            sb.append(element.getVarHi());
         }
         sb.append(UtilConstants.DUMP_END_BRACKET);
         sysOutDumpAPrintLn(sb);
 
-
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_PROOF);
-        Stmt[] proof = theorem.getProof();
-        for (int i = 0; i < proof.length; i++) {
-            if (proof[i] == null) {
+        final Stmt[] proof = theorem.getProof();
+        for (final Stmt element : proof)
+            if (element == null)
                 sb.append(UtilConstants.DUMP_PROOF_MISSING_STEP);
-            }
             else {
-                sb.append(proof[i].getLabel());
+                sb.append(element.getLabel());
                 sb.append(" ");
             }
-        }
         sysOutDumpAPrintLn(sb);
 
         sysOutDumpAPrintLn(" ");
 
     }
 
+    public void dumpStmtAxiomFull(int indentNbr, final Axiom axiom) {
 
-    public void dumpStmtAxiomFull(int          indentNbr,
-                                  Axiom        axiom) {
-
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_AXIOM);
 
         ++indentNbr;
 
-        dumpStmtProperties(indentNbr,
-                           sb,
-                           axiom);
-        dumpAssrtProperties(indentNbr,
-                            axiom);
+        dumpStmtProperties(indentNbr, sb, axiom);
+        dumpAssrtProperties(indentNbr, axiom);
 
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
 
-        int[] syntaxAxiomVarHypReseq =
-              axiom.getSyntaxAxiomVarHypReseq();
+        final int[] syntaxAxiomVarHypReseq = axiom.getSyntaxAxiomVarHypReseq();
         if (syntaxAxiomVarHypReseq != null) {
             sb.append(UtilConstants.DUMP_VARHYP_RESEQ);
             char comma = ' ';
-            for (int i = 0; i < syntaxAxiomVarHypReseq.length; i++) {
+            for (final int element : syntaxAxiomVarHypReseq) {
                 sb.append(comma);
                 comma = UtilConstants.DUMP_COMMA;
-                sb.append(syntaxAxiomVarHypReseq[i]);
+                sb.append(element);
             }
             sb.append(UtilConstants.DUMP_END_BRACKET);
         }
 
-        if (axiom.getSyntaxAxiomHasUniqueCnst()) {
+        if (axiom.getSyntaxAxiomHasUniqueCnst())
             sb.append(UtilConstants.DUMP_AXIOM_UNIQUE_CNST);
-        }
 
         sysOutDumpAPrintLn(sb);
 
@@ -668,134 +521,108 @@ public class Dump {
 
     }
 
+    public void dumpStmtLogHypFull(int indentNbr, final LogHyp logHyp) {
 
-    public void dumpStmtLogHypFull(int           indentNbr,
-                                   LogHyp       logHyp) {
-
-        StringBuffer sb = new StringBuffer();
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_LOGHYP);
 
         ++indentNbr;
 
-        dumpStmtProperties(indentNbr,
-                           sb,
-                           logHyp);
+        dumpStmtProperties(indentNbr, sb, logHyp);
         sysOutDumpAPrintLn(" ");
-
 
     }
 
+    public void dumpStmtVarHypFull(int indentNbr, final VarHyp varHyp) {
 
-    public void dumpStmtVarHypFull(int          indentNbr,
-                                   VarHyp       varHyp) {
-
-        StringBuffer sb = new StringBuffer();
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_VARHYP);
 
         ++indentNbr;
 
-        dumpStmtProperties(indentNbr,
-                           sb,
-                           varHyp);
+        dumpStmtProperties(indentNbr, sb, varHyp);
         sysOutDumpAPrintLn(" ");
-
 
     }
 
-    public void dumpAssrtProperties(int indentNbr,
-                                    Assrt assrt) {
-        StringBuffer sb = new StringBuffer();
-        MandFrame mandFrame = assrt.getMandFrame();
+    public void dumpAssrtProperties(final int indentNbr, final Assrt assrt) {
+        StringBuilder sb = new StringBuilder();
+        final ScopeFrame mandFrame = assrt.getMandFrame();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_MAND_FRAME_HYP_ARRAY);
         char comma = ' ';
-        for (int i = 0; i < mandFrame.hypArray.length; i++) {
+        for (final Hyp element : mandFrame.hypArray) {
             sb.append(comma);
             comma = UtilConstants.DUMP_COMMA;
-            sb.append(mandFrame.hypArray[i].getLabel());
+            sb.append(element.getLabel());
             sb.append(" ");
         }
         sb.append(UtilConstants.DUMP_END_BRACKET);
         sysOutDumpAPrintLn(sb);
 
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_MAND_FRAME_DJ_VARS);
         comma = ' ';
-        for (int i = 0; i < mandFrame.djVarsArray.length; i++) {
+        for (final DjVars element : mandFrame.djVarsArray) {
             sb.append(comma);
             comma = UtilConstants.DUMP_COMMA;
-            sb.append(mandFrame.djVarsArray[i].getVarLo());
+            sb.append(element.getVarLo());
             sb.append(" ");
-            sb.append(mandFrame.djVarsArray[i].getVarHi());
+            sb.append(element.getVarHi());
         }
         sb.append(UtilConstants.DUMP_END_BRACKET);
         sysOutDumpAPrintLn(sb);
 
     }
 
-
-    public void dumpStmtProperties(int          indentNbr,
-                                   StringBuffer sb,
-                                   Stmt         stmt) {
+    public void dumpStmtProperties(final int indentNbr, StringBuilder sb,
+        final Stmt stmt)
+    {
 
         sb.append(stmt.getLabel());
 
         sb.append(UtilConstants.DUMP_TYP);
         sb.append(stmt.getTyp());
 
-        if (stmt.isActive()) {
+        if (stmt.isActive())
             sb.append(UtilConstants.DUMP_IS_ACTIVE);
-        }
 
-        if (stmt.isAssrt()) {
+        if (stmt instanceof Assrt)
             sb.append(UtilConstants.DUMP_IS_ASSRT);
-        }
 
-        if (stmt.isHyp()) {
+        if (stmt instanceof Hyp)
             sb.append(UtilConstants.DUMP_IS_HYP);
-        }
-
-        if (stmt.isCnst()) {
-            sb.append(UtilConstants.DUMP_IS_CNST);
-        }
 
         sb.append(UtilConstants.DUMP_MAND_VARHYP_ARRAY);
-        VarHyp[] varHypArray = stmt.getMandVarHypArray();
+        final VarHyp[] varHypArray = stmt.getMandVarHypArray();
         char comma = ' ';
-        for (int i = 0; i < varHypArray.length; i++) {
+        for (final VarHyp element : varHypArray) {
             sb.append(comma);
             comma = UtilConstants.DUMP_COMMA;
-            sb.append(varHypArray[i].getLabel());
+            sb.append(element.getLabel());
             sb.append(" ");
         }
         sb.append(UtilConstants.DUMP_END_BRACKET);
         sysOutDumpAPrintLn(sb);
 
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_FORMULA);
 
-
-        if (tmffPreferences.isTMFFEnabled()
-            &&
-            (stmt.getExprParseTree() != null)
-            &&
-            (stmt.getExprParseTree().getRoot().getStmt() != stmt)) {
+        if (tmffPreferences.isTMFFEnabled() && stmt.getExprParseTree() != null
+            && stmt.getExprParseTree().getRoot().getStmt() != stmt)
+        {
             // ok!
-            TMFFStateParams tmffSP
-                                  =
-                new TMFFStateParams(sb,
-                                    sb.length(),
-                                    tmffPreferences);
-            tmffSP.setLeftmostColNbr(sb.length() + 2); //local override!
-            tmffPreferences.renderFormula(tmffSP,
-                                          stmt.getExprParseTree(),
-                                          stmt.getFormula());
+            final TMFFStateParams tmffSP = new TMFFStateParams(sb, sb.length(),
+                tmffPreferences);
+            tmffSP.setLeftmostColNbr(sb.length() + 2); // local override!
+            tmffPreferences.renderFormula(tmffSP, stmt.getExprParseTree(),
+                stmt.getFormula());
         }
         else {
             // do it the old way, for conformity with the old version
@@ -807,32 +634,28 @@ public class Dump {
 
         sysOutDumpAPrintLn(sb);
 
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_EXPR_RPN);
-        Stmt[] exprRPN = stmt.getExprRPN();
-        if (exprRPN != null) {
-            for (int i = 0; i < exprRPN.length; i++) {
-                sb.append(exprRPN[i].getLabel());
+        final Stmt[] exprRPN = stmt.getExprRPN();
+        if (exprRPN != null)
+            for (final Stmt element : exprRPN) {
+                sb.append(element.getLabel());
                 sb.append(" ");
             }
-        }
         sysOutDumpAPrintLn(sb);
     }
 
-
-    public void dumpSymVarFull(int indentNbr,
-                               Var var) {
-        VarHyp       varHyp;
-        StringBuffer sb = new StringBuffer();
+    public void dumpSymVarFull(final int indentNbr, final Var var) {
+        VarHyp varHyp;
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_VAR);
         sb.append(var.getId());
 
-        if (var.isActive()) {
+        if (var.isActive())
             sb.append(UtilConstants.DUMP_IS_ACTIVE);
-        }
 
         varHyp = var.getActiveVarHyp();
         if (varHyp != null) {
@@ -843,50 +666,38 @@ public class Dump {
         sysOutDumpAPrintLn(sb);
     }
 
-
-    public void dumpSymCnstFull(int          indentNbr,
-                                Cnst         cnst) {
-        StringBuffer sb = new  StringBuffer();
+    public void dumpSymCnstFull(final int indentNbr, final Cnst cnst) {
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_CNST);
 
         sb.append(cnst.getId());
 
-        if (cnst.getIsVarTyp()) {
+        if (cnst.getIsVarTyp())
             sb.append(UtilConstants.DUMP_IS_VAR_TYP);
-        }
 
-        if (cnst.getIsGrammaticalTyp()) {
+        if (cnst.getIsGrammaticalTyp())
             sb.append(UtilConstants.DUMP_IS_GRAMMATICAL_TYP);
-        }
-        if (cnst.getIsProvableLogicStmtTyp()) {
+        if (cnst.getIsProvableLogicStmtTyp())
             sb.append(UtilConstants.DUMP_IS_PROVABLE_TYP);
-        }
-        if (cnst.getIsLogicStmtTyp()) {
+        if (cnst.getIsLogicStmtTyp())
             sb.append(UtilConstants.DUMP_IS_LOGIC_TYP);
-        }
-        if (cnst.getIsSyntaxAxiomTyp()) {
+        if (cnst.getIsSyntaxAxiomTyp())
             sb.append(UtilConstants.DUMP_IS_SYNTAX_AXIOM_TYP);
-        }
 
-        if (cnst.getLen1CnstNotationRule() != null) {
+        if (cnst.getLen1CnstNotationRule() != null)
             sb.append(UtilConstants.DUMP_LEN1_CNST_RULE_NBR
-                      + cnst.getLen1CnstNotationRule(
-                                ).getRuleNbr()
-                      + UtilConstants.DUMP_LEN1_CNST_AXIOM
-                      + cnst.getLen1CnstNotationRule(
-                          ).getBaseSyntaxAxiom().getLabel());
-        }
+                + cnst.getLen1CnstNotationRule().getRuleNbr()
+                + UtilConstants.DUMP_LEN1_CNST_AXIOM
+                + cnst.getLen1CnstNotationRule().getBaseSyntaxAxiom()
+                    .getLabel());
 
-        Collection c = cnst.getEarleyFIRST();
-        if (c != null) {
-            Iterator f = c.iterator();
+        final Collection<Cnst> coll = cnst.getEarleyFIRST();
+        if (coll != null) {
             sb.append(UtilConstants.DUMP_EARLEY_FIRST);
-            while (f.hasNext()) {
-                sb.append(f.next());
-                sb.append(" ");
-            }
+            for (final Cnst c : coll)
+                sb.append(c).append(" ");
             sb.append(UtilConstants.DUMP_END_BRACKET);
         }
 
@@ -894,54 +705,45 @@ public class Dump {
 
     }
 
-    public void dumpGrammarRuleCollection(
-                            int        indentNbr,
-                            String     caption,
-                            Collection grammarRuleCollection) {
+    public void dumpGrammarRuleCollection(final int indentNbr,
+        final String caption,
+        final Collection<GrammarRule> grammarRuleCollection)
+    {
 
-        dumpGrammarRuleCollection(Integer.MAX_VALUE,
-                                  indentNbr,
-                                  caption,
-                                  grammarRuleCollection);
+        dumpGrammarRuleCollection(Integer.MAX_VALUE, indentNbr, caption,
+            grammarRuleCollection);
     }
 
-    public void dumpGrammarRuleCollection(
-                        int        maxDumpCnt,
-                        int        indentNbr,
-                        String     caption,
-                        Collection grammarRuleCollection) {
+    public void dumpGrammarRuleCollection(final int maxDumpCnt,
+        final int indentNbr, final String caption,
+        final Collection<? extends GrammarRule> grammarRuleCollection)
+    {
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_RULE_COLLECTION
-                           + caption
-                           + UtilConstants.DUMP_OF_FIRST
-                           + maxDumpCnt);
+            + UtilConstants.DUMP_RULE_COLLECTION + caption
+            + UtilConstants.DUMP_OF_FIRST + maxDumpCnt);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                     + UtilConstants.DUMP_RULE_COLLECTION_UNDERSCORE);
+            + UtilConstants.DUMP_RULE_COLLECTION_UNDERSCORE);
 
-        if (grammarRuleCollection == null ||
-            grammarRuleCollection.size() == 0) {
+        if (grammarRuleCollection == null || grammarRuleCollection.isEmpty()) {
             sysOutDumpAPrintLn(indentTbl[indentNbr]
-                     + UtilConstants.DUMP_RULE_COLLECTION_IS_EMPTY);
+                + UtilConstants.DUMP_RULE_COLLECTION_IS_EMPTY);
             return;
         }
 
-        TreeSet   gRSet = new TreeSet(GrammarRule.RULE_NBR);
+        final Set<GrammarRule> gRSet = new TreeSet<GrammarRule>(
+            GrammarRule.RULE_NBR);
         gRSet.addAll(grammarRuleCollection);
 
-        GrammarRule grammarRule;
-        Iterator iterator = gRSet.iterator();
-        while (iterator.hasNext()) {
-            grammarRule = (GrammarRule)iterator.next();
-            dumpGrammarRuleFull(indentNbr,
-                                grammarRule);
-        }
+        for (final GrammarRule grammarRule : gRSet)
+            dumpGrammarRuleFull(indentNbr, grammarRule);
     }
 
-    public void dumpGrammarRuleFull(int indentNbr,
-                                    GrammarRule grammarRule) {
-        StringBuffer sb = new  StringBuffer();
+    public void dumpGrammarRuleFull(final int indentNbr,
+        final GrammarRule grammarRule)
+    {
+        StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_GRAMMAR_RULE);
@@ -959,29 +761,27 @@ public class Dump {
         sb.append(grammarRule.getNbrHypParamsUsed());
 
         sysOutDumpAPrintLn(sb);
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_PARAM_TREE_AS_RPN);
-        Stmt[] pTTRPN =
-            grammarRule.getParamTransformationTree().convertToRPN();
-        for (int i = 0; i < pTTRPN.length; i++) {
-            sb.append(pTTRPN[i].getLabel());
+        final Stmt[] pTTRPN = grammarRule.getParamTransformationTree()
+            .convertToRPN();
+        for (final Stmt element : pTTRPN) {
+            sb.append(element.getLabel());
             sb.append(" ");
         }
 
         sysOutDumpAPrintLn(sb);
-        sb = new StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_PARAM_VARHYP_NODE_ARRAY);
-        ParseNode[] pVHN =
-            grammarRule.getParamVarHypNode();
+        final ParseNode[] pVHN = grammarRule.getParamVarHypNode();
         for (int i = 0; i < pVHN.length; i++) {
             sb.append(UtilConstants.DUMP_START_BRACKET);
             sb.append(i);
             sb.append(UtilConstants.DUMP_END_BRACKET);
-            if (pVHN[i] == null) {
+            if (pVHN[i] == null)
                 sb.append(" ");
-            }
             else {
                 sb.append(pVHN[i].getStmt().getLabel());
                 sb.append(" ");
@@ -990,86 +790,72 @@ public class Dump {
 
         sysOutDumpAPrintLn(sb);
 
-        if (grammarRule instanceof NullsPermittedRule) {
-            dumpNullsPermittedRuleProperties(
-                                 indentNbr,
-                                 (NullsPermittedRule)grammarRule);
-        }
-        if (grammarRule instanceof TypeConversionRule) {
-            dumpTypeConversionRuleProperties(
-                                 indentNbr,
-                                 (TypeConversionRule)grammarRule);
-        }
-        if (grammarRule instanceof NotationRule) {
-            dumpNotationRuleProperties(
-                                 indentNbr,
-                                 (NotationRule)grammarRule);
-        }
+        if (grammarRule instanceof NullsPermittedRule)
+            dumpNullsPermittedRuleProperties(indentNbr,
+                (NullsPermittedRule)grammarRule);
+        if (grammarRule instanceof TypeConversionRule)
+            dumpTypeConversionRuleProperties(indentNbr,
+                (TypeConversionRule)grammarRule);
+        if (grammarRule instanceof NotationRule)
+            dumpNotationRuleProperties(indentNbr, (NotationRule)grammarRule);
         sysOutDumpAPrintLn(" ");
-
 
     }
 
-    public void dumpNotationRuleProperties(
-                                     int indentNbr,
-                                     NotationRule notationRule) {
-        StringBuffer sb = new  StringBuffer();
-        String       s;
-        int          padit;
+    public void dumpNotationRuleProperties(final int indentNbr,
+        final NotationRule notationRule)
+    {
+        StringBuilder sb = new StringBuilder();
+        String s;
+        int padit;
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_NOTATION_RULE);
 
-        s     = notationRule.getBaseSyntaxAxiom().getLabel();
+        s = notationRule.getBaseSyntaxAxiom().getLabel();
         padit = UtilConstants.DUMP_NOTATION_LABEL_PADIT - s.length();
         sb.append(s);
-        for (int i = 0; i < padit; i++) {
+        for (int i = 0; i < padit; i++)
             sb.append(' ');
-        }
 
         sb.append(UtilConstants.DUMP_RULE_COLON);
 
-        s = (new Integer(notationRule.getRuleNbr())).toString();
-        padit = UtilConstants.DUMP_NOTATION_RULE_NBR_PADIT
-                - s.length();
-        for (int i = 0; i < padit; i++) {
+        s = Integer.valueOf(notationRule.getRuleNbr()).toString();
+        padit = UtilConstants.DUMP_NOTATION_RULE_NBR_PADIT - s.length();
+        for (int i = 0; i < padit; i++)
             sb.append('0');
-        }
         sb.append(s);
 
         sb.append(UtilConstants.DUMP_RULE_COLON);
 
         s = notationRule.getGrammarRuleTyp().getId();
-        padit = UtilConstants.DUMP_NOTATION_RULE_TYP_PADIT
-                - s.length();
+        padit = UtilConstants.DUMP_NOTATION_RULE_TYP_PADIT - s.length();
         sb.append(s);
-        for (int i = 0; i < padit; i++) {
+        for (int i = 0; i < padit; i++)
             sb.append(' ');
-        }
 
         sb.append(UtilConstants.DUMP_GRAMMAR_RULE_REPLACEMENT_SYMBOL);
 
-        Cnst[] ruleFormatExpr = notationRule.getForestRuleExpr();
-        for (int i = 0; i < ruleFormatExpr.length; i++) {
-            sb.append(ruleFormatExpr[i]);
+        final Cnst[] ruleFormatExpr = notationRule.getForestRuleExpr();
+        for (final Cnst element : ruleFormatExpr) {
+            sb.append(element);
             sb.append(" ");
         }
 
         sysOutDumpAPrintLn(sb);
 
-        sb = new  StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
-
 
         sb.append(UtilConstants.DUMP_IS_GIMME_MATCH_NBR);
         sb.append(notationRule.getIsGimmeMatchNbr());
         sysOutDumpAPrintLn(sb);
     }
 
-    public void dumpTypeConversionRuleProperties(
-                             int indentNbr,
-                             TypeConversionRule typeConversionRule) {
-        StringBuffer sb = new  StringBuffer();
+    public void dumpTypeConversionRuleProperties(final int indentNbr,
+        final TypeConversionRule typeConversionRule)
+    {
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_TYPE_CONVERSION_RULE);
@@ -1081,10 +867,10 @@ public class Dump {
 
     }
 
-    public void dumpNullsPermittedRuleProperties(
-                             int indentNbr,
-                             NullsPermittedRule nullsPermittedRule) {
-        StringBuffer sb = new  StringBuffer();
+    public void dumpNullsPermittedRuleProperties(final int indentNbr,
+        final NullsPermittedRule nullsPermittedRule)
+    {
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_NULLS_PERMITTED_RULE);
@@ -1095,228 +881,165 @@ public class Dump {
 
     }
 
-    public void dumpTheGrammar(
-                             int        indentNbr,
-                             Collection grammarTypSet,
-                             Collection symTbl) {
+    public void dumpTheGrammar(final int indentNbr,
+        final Collection<Cnst> grammarTypSet, final Collection<Sym> symTbl)
+    {
 
-        TreeSet   cnstWithRules = new TreeSet(Sym.ID);
+        final Set<Cnst> cnstWithRules = new TreeSet<Cnst>(Sym.ID);
 
-        Iterator  symIterator   = symTbl.iterator();
-        Cnst cnst;
-        Sym  sym;
-        while (symIterator.hasNext()) {
-            sym = (Sym)symIterator.next();
-            if (!sym.isCnst()) {
+        for (final Sym sym : symTbl) {
+            if (!(sym instanceof Cnst))
                 continue;
-            }
-            cnst = (Cnst)sym;
-            if (cnst.getGRRoot() != null) {
+            final Cnst cnst = (Cnst)sym;
+            if (cnst.getGRRoot() != null)
                 cnstWithRules.add(cnst);
-            }
         }
 
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_THE_GRAMMAR);
         sysOutDumpAPrintLn(sb);
 
-        sb = new  StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr]);
         sb.append(UtilConstants.DUMP_THE_GRAMMAR_UNDERSCORE);
         sysOutDumpAPrintLn(sb);
 
-        if (grammarTypSet.size() == 0 ||
-            cnstWithRules.size() == 0) {
+        if (grammarTypSet.isEmpty() || cnstWithRules.isEmpty())
             sb.append(UtilConstants.DUMP_THE_GRAMMAR_IS_EMPTY);
-        }
 
-        sb = new  StringBuffer();
+        sb = new StringBuilder();
         sb.append(indentTbl[indentNbr + 1]);
 
-        Cnst[]      ruleFormatExpr;
+        final String startRuleLit = UtilConstants.DUMP_GRAMMAR_RULE_REPLACEMENT_SYMBOL;
 
-        String      startRuleLit  =
-            UtilConstants.DUMP_GRAMMAR_RULE_REPLACEMENT_SYMBOL;
+        final String continueRuleLit = UtilConstants.DUMP_RULE_CONTINUATION_LIT;
 
-        String      continueRuleLit
-                                  =
-            UtilConstants.DUMP_RULE_CONTINUATION_LIT;
-
-        String      currLit;
-        int         typIndentLength;
-        Iterator    ruleIterator;
-        ArrayList   grammarTypRulesList;
-        GrammarRule g;
-        Iterator    cnstRuleIterator;
-        Collection  cnstRuleCollection;
-        Cnst        grammarTyp;
-        Iterator    cnstIterator;
-        Iterator    typIterator     = grammarTypSet.iterator();
-        while (typIterator.hasNext()) {
-            grammarTyp = (Cnst)typIterator.next();
-            grammarTypRulesList = new ArrayList();
-            cnstIterator = cnstWithRules.iterator();
-            while (cnstIterator.hasNext()) {
-                cnst = (Cnst)cnstIterator.next();
-                cnstRuleCollection =
-                    GRForest.getRuleCollection(cnst.getGRRoot());
-                cnstRuleIterator = cnstRuleCollection.iterator();
-                while (cnstRuleIterator.hasNext()) {
-                    g = (GrammarRule)cnstRuleIterator.next();
-                    if (g.getGrammarRuleTyp() == grammarTyp) {
+        for (final Cnst grammarTyp : grammarTypSet) {
+            final List<GrammarRule> grammarTypRulesList = new ArrayList<GrammarRule>();
+            for (final Cnst cnst : cnstWithRules)
+                for (final NotationRule g : GRForest.getRuleCollection(cnst
+                    .getGRRoot()))
+                    if (g.getGrammarRuleTyp() == grammarTyp)
                         grammarTypRulesList.add(g);
-                    }
-                }
-            }
-            if (grammarTypRulesList.size() == 0) {
+            if (grammarTypRulesList.isEmpty())
                 continue;
-            }
 
-            sb = new  StringBuffer();
+            sb = new StringBuilder();
             sb.append(indentTbl[indentNbr + 1]);
             sb.append(grammarTyp);
-            currLit         = startRuleLit;
-            typIndentLength = grammarTyp.getId().length();
-            ruleIterator = grammarTypRulesList.iterator();
-            while (ruleIterator.hasNext()) {
-                g = (GrammarRule)ruleIterator.next();
+            String currLit = startRuleLit;
+            final int typIndentLength = grammarTyp.getId().length();
+            for (final GrammarRule g : grammarTypRulesList) {
                 sb.append(currLit);
-                ruleFormatExpr = g.getForestRuleExpr();
-                for (int i = 0; i < ruleFormatExpr.length; i++) {
-                    sb.append(ruleFormatExpr[i]);
+                final Cnst[] ruleFormatExpr = g.getForestRuleExpr();
+                for (final Cnst element : ruleFormatExpr) {
+                    sb.append(element);
                     sb.append(" ");
                 }
                 sysOutDumpAPrintLn(sb);
-                sb = new  StringBuffer();
+                sb = new StringBuilder();
                 sb.append(indentTbl[indentNbr + 1]);
-                for (int i = 0; i < typIndentLength; i++) {
+                for (int i = 0; i < typIndentLength; i++)
                     sb.append(" ");
-                }
                 currLit = continueRuleLit;
             }
             sysOutDumpAPrintLn(" ");
         }
     }
 
-    private void dumpBookManagerSectionDetails(
-                                 int                indentNbr,
-                                 RunParmArrayEntry  runParm,
-                                 BookManager        bookManager,
-                                 Iterator           iterator,
-                                 Section            selectedSection) {
+    private void dumpBookManagerSectionDetails(final int indentNbr,
+        final RunParmArrayEntry runParm, final BookManager bookManager,
+        final Iterable<MObj> iterable, final Section selectedSection)
+    {
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + runParm.name + ","
+            + runParm.values[0]);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + runParm.name
-                           + ","
-                           + runParm.values[0]);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
+            + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
 
-        int     prevChapterNbr    = -1;
-        int     prevSectionNbr    = -1;
-        int     nbrDetailsPrinted = 0;
+        int prevChapterNbr = -1;
+        int prevSectionNbr = -1;
 
-        Chapter chapter;
-        Section section;
-        int     chapterNbr;
-        int     sectionNbr;
-
-        MObj    mObj;
-        while (iterator.hasNext()) {
-
-            mObj                  = (MObj)iterator.next();
-            sectionNbr            = mObj.getSectionNbr();
+        for (final MObj mObj : iterable) {
+            final int sectionNbr = mObj.getSectionNbr();
             if (selectedSection != null) {
-                if (sectionNbr > selectedSection.getSectionNbr()) {
+                if (sectionNbr > selectedSection.getSectionNbr())
                     return;
-                }
-                if (sectionNbr < selectedSection.getSectionNbr()) {
+                if (sectionNbr < selectedSection.getSectionNbr())
                     continue;
-                }
             }
-            section               =
-                bookManager.getSection(sectionNbr);
-            chapter               =
-                bookManager.getChapterForSectionNbr(sectionNbr);
-            chapterNbr            = chapter.getChapterNbr();
+            final Section section = bookManager.getSection(sectionNbr);
+            final Chapter chapter = bookManager
+                .getChapterForSectionNbr(sectionNbr);
+            final int chapterNbr = chapter.getChapterNbr();
 
             if (chapterNbr != prevChapterNbr) {
-                dumpOneBookManagerChapter(indentNbr,
-                                          chapter);
-                prevChapterNbr    = chapterNbr;
+                dumpOneBookManagerChapter(indentNbr, chapter);
+                prevChapterNbr = chapterNbr;
             }
 
             if (sectionNbr != prevSectionNbr) {
-                dumpOneBookManagerSection(indentNbr + 1,
-                                          section);
-                prevSectionNbr    = sectionNbr;
+                dumpOneBookManagerSection(indentNbr + 1, section);
+                prevSectionNbr = sectionNbr;
             }
 
-            dumpOneBookManagerSectionDetail(indentNbr + 2,
-                                            mObj);
-            ++nbrDetailsPrinted;
+            dumpOneBookManagerSectionDetail(indentNbr + 2, mObj);
         }
 
     }
 
-    private void dumpBookManagerChapters(int      indentNbr,
-                                         String   caption,
-                                         Iterator iterator) {
-
+    private void dumpBookManagerChapters(final int indentNbr,
+        final String caption, final Collection<Chapter> coll)
+    {
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + caption);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + caption);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
+            + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
 
-        while (iterator.hasNext()) {
-            dumpOneBookManagerChapter(indentNbr,
-                                      (Chapter)iterator.next());
-        }
+        for (final Chapter c : coll)
+            dumpOneBookManagerChapter(indentNbr, c);
     }
 
-    private void dumpBookManagerSections(int      indentNbr,
-                                         String   caption,
-                                         Iterator iterator) {
-
+    private void dumpBookManagerSections(final int indentNbr,
+        final String caption, final Collection<Section> coll)
+    {
 
         sysOutDumpAPrintLn(indentTbl[indentNbr]);
+        sysOutDumpAPrintLn(indentTbl[indentNbr] + caption);
         sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + caption);
-        sysOutDumpAPrintLn(indentTbl[indentNbr]
-                           + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
+            + UtilConstants.DUMP_STMT_TBL_UNDERSCORE);
 
-        while (iterator.hasNext()) {
-            dumpOneBookManagerSection(indentNbr,
-                                      (Section)iterator.next());
-        }
+        for (final Section s : coll)
+            dumpOneBookManagerSection(indentNbr, s);
     }
 
-    private void dumpOneBookManagerChapter(int      indentNbr,
-                                           Chapter  chapter) {
-        StringBuffer sb = new StringBuffer();
+    private void dumpOneBookManagerChapter(final int indentNbr,
+        final Chapter chapter)
+    {
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(chapter.toString());
         sysOutDumpAPrintLn(sb);
     }
 
-    private void dumpOneBookManagerSection(int      indentNbr,
-                                           Section  section) {
-        StringBuffer sb = new StringBuffer();
+    private void dumpOneBookManagerSection(final int indentNbr,
+        final Section section)
+    {
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
         sb.append(section.toString());
         sysOutDumpAPrintLn(sb);
     }
 
-    private void dumpOneBookManagerSectionDetail
-                                    (int    indentNbr,
-                                     MObj   mObj) {
-        StringBuffer sb           = new StringBuffer();
+    private void dumpOneBookManagerSectionDetail(final int indentNbr,
+        final MObj mObj)
+    {
+        final StringBuilder sb = new StringBuilder();
 
         sb.append(indentTbl[indentNbr]);
 
@@ -1342,29 +1065,18 @@ public class Dump {
             return;
         }
 
-        Stmt stmt             = (Stmt)mObj;
+        final Stmt stmt = (Stmt)mObj;
 
-        if (mObj instanceof VarHyp) {
+        if (mObj instanceof VarHyp)
             sb.append(UtilConstants.DUMP_BM_VARHYP);
-        }
-        else {
-            if (mObj instanceof LogHyp) {
-                sb.append(UtilConstants.DUMP_BM_LOGHYP);
-            }
-            else {
-                if (mObj instanceof Axiom) {
-                    sb.append(UtilConstants.DUMP_BM_AXIOM);
-                }
-                else {
-                    if (mObj instanceof Theorem) {
-                        sb.append(UtilConstants.DUMP_BM_THEOREM);
-                    }
-                    else {
-                        sb.append(UtilConstants.DUMP_BM_UNKNOWN);
-                    }
-                }
-            }
-        }
+        else if (mObj instanceof LogHyp)
+            sb.append(UtilConstants.DUMP_BM_LOGHYP);
+        else if (mObj instanceof Axiom)
+            sb.append(UtilConstants.DUMP_BM_AXIOM);
+        else if (mObj instanceof Theorem)
+            sb.append(UtilConstants.DUMP_BM_THEOREM);
+        else
+            sb.append(UtilConstants.DUMP_BM_UNKNOWN);
 
         sb.append(mObj.getSectionNbr());
         sb.append(UtilConstants.DUMP_BM_DOT);
